--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: XLPE ENGINEERING
+logo
+description: Electrical Contractor | Electrical Works
+#show_downloads: true
+theme: jekyll-theme-minimal
