--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,4 @@ title: XLPE ENGINEERING
 logo
 description: Electrical Contractor | Electrical Works
 #show_downloads: true
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme 
+remote_theme: pages-themes/minimal@v0.2.0
