--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: XLPE ENGINEERING
-logo: docs/assets/XLPE LOGO.jpg  
+logo: docs/assets/XLPE_LOGO.jpg  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
 theme: jekyll-theme-slate
