--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: XLPE ENGINEERING
-logo: <img src="/assets/XLPE_LOGO.jpg" alt="XLPE Engineering Logo" style="max-width: 200px;">  
+logo: assets/XLPE_LOGO.jpg  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
 theme: jekyll-theme-slate
