--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: XLPE ENGINEERING
-logo: assets/XLPE_LOGO.jpg  
+logo: docs/assets/xlpe_logo.jpg  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
 theme: jekyll-theme-slate
