--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: XLPE ENGINEERING
 logo: docs/assets/xlpe_logo.jpg  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
-theme: jekyll-theme-slate
+themes: slate@v0.2.0
