--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: XLPE ENGINEERING
 logo: docs/assets/xlpe_logo.JPG  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
-themes: slate@v0.2.0
+themes: minimal@v0.2.0
