--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: docs/assets/xlpe_logo.JPG
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
 themes: pages-themes/minimal@v0.2.0
-plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
+plugins: plugins_dir
