--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: XLPE ENGINEERING
-logo: docs/assets/xlpe_logo.JPG  
+logo: docs/xlpe_logo.JPG  
 description: Electrical Contractor | Electrical Works
 #show_downloads: true  
 themes: pages-themes/minimal@v0.2.0
