--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: XLPE ENGINEERING
-logo: docs/assets/XLPE_LOGO.jpg
+logo: docs/assets/XLPE_LOGO.jpg?version=1
 description: Electrical Contractor | Electrical Works
 #show_downloads: true
 themes: pages-themes/minimal@v0.2.0
